<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QFRadio</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_text">Press Me</string>
        <string name="button_comment_text">Comment!</string>
    
  <string name="hello_android">Hello Android</string>
  <string name="text_name">Name</string>
  <string name="text_location">Location</string>
  <string name="text_comment">Comment</string>
  <string name="text_menu_computer">Computer</string>
  <string name="text_menu_ps3">PS3</string>
  <string name="text_menu_xbox">Xbox</string>
  <string name="change_fragment">Change Fragment</string>
  <string name="button_query">Query</string>
  <string name="text_time">Time</string>
</resources>